[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21", default-features = false, features = ["libm"] }
ash = "0.37.0+1.3.209"
ash-window = "0.11.0"
winit = "0.27.2"
f_renderer = { path = "../f_renderer" }

wgpu = "0.16.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
futures-lite = "1.13.0"
image = "0.24.6"